# binaryninja-api

./: .gitignore  architecture.cpp  binaryninjaapi.h  binaryninjacore.h  binaryview.cpp  component.cpp  demangle.cpp  filemetadata.cpp  function.cpp  http.cpp  http.h  lowlevelil.cpp  mediumlevelil.cpp  mediumlevelilinstruction.cpp  mediumlevelilinstruction.h  mkdocs.yml  project.cpp  type.cpp
cpp/: activity.cpp  binaryview.cpp  getobject.cpp
docs/: docs.css  getting-started.md
examples/bin-info/src/: bin-info.cpp
examples/breakpoint/src/: breakpoint.cpp
examples/customtabitem/: CMakeLists.txt  customtabitem.cpp
examples/llil_parser/src/: llil_parser.cpp
examples/mlil_parser/src/: mlil_parser.cpp
examples/print_syscalls/src/: arm-syscall.cpp
examples/triage/: sections.cpp
examples/workflows/inliner/: inliner.cpp
examples/workflows/objectivec/: objectivec.cpp
examples/workflows/tailcall/: tailcall.cpp
include/binaryninja/: activity.hpp  architecture.hpp  binaryview.hpp  database.hpp  debuginfo.hpp  filemetadata.hpp  flowgraph.hpp  function.hpp  lowlevelil.hpp  mediumlevelil.hpp  plugincommand.hpp  refcount.hpp
include/binaryninjacore/: activity.h
python/: CMakeLists.txt  __init__.py  binaryview.py  component.py  demangle.py  filemetadata.py  function.py  generator.cpp  highlight.py  interaction.py  settings.py  types.py
rust/: Cargo.toml
rust/binaryninjacore-sys/: build.rs
rust/examples/dwarf/dwarfdump-cli/: Cargo.toml  thing
rust/examples/dwarf/dwarfdump-cli/src/: dwarfreader.rs  main.rs
rust/examples/dwarf/dwarfdump/src/: lib.rs
rust/examples/dwarf/parse_dwarf/: Cargo.toml
rust/examples/dwarf/parse_dwarf/src/: dwarfdebuginfo.rs  dwarfreader.rs  helpers.rs  lib.rs  types.rs
rust/examples/dwarf/shared/src/: lib.rs
rust/examples/dwarfdump-cli/: Cargo.toml
rust/examples/parse_dwarf/: CMakeLists.txt
rust/examples/parse_dwarf/src/: dwarfdebuginfo.rs
rust/examples/template/: Cargo.toml
rust/src/: architecture.rs  filemetadata.rs  types.rs
suite/: api_test.py  testcommon.py
ui/: commands.h  createarraydialog.h  customtabitem.h  debuginfo.h  expandablegroup.h  filter.h  linearview.h  logview.h  metadatachoicedialog.h  progresstask.h  settingsview.h  symbollist.h  typedialog.h  typeview.h  variablelist.h  viewframe.h
(+1 files in other folders)
