[package]
name = "binaryninja"
version = "0.1.0"
authors = ["Ryan Snyder <ryan@vector35.com>", "Kyle Martin <kyle@vector35.com>"]
edition = "2021"

[dependencies]
log = "0.4"
libc = "0.2"
rayon = { version = "1.0", optional = true }
binaryninjacore-sys = { path = "binaryninjacore-sys" }

[workspace]
members = [
    "examples/basic_script",
    "examples/decompile",
    "examples/flowgraph",
    "examples/template",
    "examples/dwarf/dwarfdump",
    "examples/dwarf/dwarfdump-cli",
    "examples/dwarf/parse_dwarf",
    "examples/dwarf/shared",
    "examples/dwarf/test-gimli-bug"
]
