[package]
name = "dwarfdump-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binaryninja = { path = "../../../" }
dwarfreader = { path = "../shared" }
fallible-iterator = "0.2.0"
gimli = "0.26.1"
getopts = "0.2"
rayon = "1.0"
regex = "1"
test-assembler = "0.1.3"
